--- a/app/assets/stylesheets/depot.css
+++ b/app/assets/stylesheets/depot.css
@@ -11,6 +11,7 @@
 
 
 #store h1 {
+	font-size:xx-large;
         font:  150% sans-serif;
         color: #226;
         border-bottom: 3px dotted #77d;
@@ -21,10 +22,13 @@
 #product_list table {
         border-collapse: collapse;
 }
-
+#store .entry form, #store .entry form div {
+display: inline;
+}
 #product_list table tr td {
         padding: 5px;
         vertical-align: top;
+		font-size:36px;
 }
 
 #product_list .list_image {
@@ -73,7 +77,7 @@
 }
 
 #store  .title {
-  font-size: 120%;
+  font-size: 200%;
   font-family: sans-serif;
 }
 
@@ -88,7 +92,7 @@
 #store .entry h3 {
  margin-top: 0;
  margin-bottom: 2px;
- color: #227;
+ color: #7918BA;
 }
 
 #store .entry p {
@@ -109,4 +113,37 @@
   color: #44a;
   font-weight: bold;
   margin-right: 2em;
+}
+#banner {
+background: #9c9;
+padding-top: 10px;
+padding-bottom: 10px;
+border-bottom: 2px solid;
+font: small-caps 40px/40px "Times New Roman" , serif;
+color: #282;
+text-align: center;
+}
+#banner img {
+float: left;
+}
+#columns {
+background: #F03;
+}
+#main {
+margin-left: 17em;
+padding-top: 4ex;
+padding-left: 2em;
+background: white;
+}
+#side {
+float: left;
+padding-top: 1em;
+padding-left: 1em;
+padding-bottom: 1em;
+width: 16em;
+background: #141;
+}
+#side a {
+color: #bfb;
+font-size: larger;
 }
